--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,6 +5,6 @@ Login
   <p>Username: <input type ="text" name = "username"></p>
  
   <p>Password: <input type ="text" name = "password"></p>
-    <input type="submit" value="Login">
+    <input type="submit" value="submit" name="submit">
 
 </form>
