Automatically backed up by Learn

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,4 @@
-<%= @tweet.content %>
+<%= @item.item_name %>
 <a href = "/items/<%= @item.id%>/edit">Edit Item</a>
 Delete Tweet
 <form action="/items/<%= @item.id %>" method="post">
